--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             justify-content: center;
             color: #fff;
             font-family: Arial, sans-serif;
+            touch-action: none; /* 禁止手机默认滑屏 */
         }
         #game-board {
             background: #222;
@@ -32,6 +33,8 @@
             font-size: 14px;
             margin-top: 10px;
             color: #888;
+            text-align: center;
+            line-height: 1.5;
         }
         #start-btn {
             position: absolute;
@@ -54,8 +57,8 @@
         #start-btn:active {
             transform: scale(0.98);
         }
-        /* Game Over 提示样式（更醒目） */
-        .game-over-modal {
+        /* 弹窗通用样式 */
+        .modal {
             position: fixed;
             top: 0;
             left: 0;
@@ -73,7 +76,14 @@
             font-weight: bold;
             color: #F44336;
             margin-bottom: 20px;
-            text-shadow: 0 0 10px rgba(244, 67, 54, 0.8);
+            text-shadow: 0 0 15px rgba(244, 67, 54, 0.8);
+        }
+        .victory-text {
+            font-size: 48px;
+            font-weight: bold;
+            color: #FFEB3B;
+            margin-bottom: 20px;
+            text-shadow: 0 0 15px rgba(255, 235, 59, 0.8);
         }
         .final-score {
             font-size: 28px;
@@ -98,13 +108,14 @@
 <body>
     <div id="score">Score: 0</div>
     <div id="game-board"></div>
-    <div id="tips">Control: Arrow Keys | Each segment keeps its color permanently</div>
+    <div id="tips">PC: Arrow Keys | Mobile: Swipe | Win: Reach 250 Score</div>
     <button id="start-btn">Start</button>
 
     <script>
         const gameBoard = document.getElementById('game-board');
         const scoreElement = document.getElementById('score');
         const startBtn = document.getElementById('start-btn');
+        // 初始绿色蛇身
         let snake = [
             { x: 10, y: 10, color: '#4CAF50' },
             { x: 9, y: 10, color: '#4CAF50' },
@@ -115,7 +126,12 @@
         let score = 0;
         let gameLoop;
         let isGameStarted = false;
+        // 触屏控制变量
+        let touchStartX = 0;
+        let touchStartY = 0;
+        const WIN_SCORE = 250; // 胜利分数：250
 
+        // 生成随机食物颜色
         function getRandomColor() {
             const colors = [
                 '#F44336', '#E91E63', '#9C27B0', '#673AB7',
@@ -126,6 +142,7 @@
             return colors[Math.floor(Math.random() * colors.length)];
         }
 
+        // 生成随机位置食物
         function generateFood() {
             let newFood;
             while (!newFood || snake.some(seg => seg.x === newFood.x && seg.y === newFood.y)) {
@@ -138,7 +155,9 @@
             return newFood;
         }
 
+        // 游戏核心更新逻辑
         function update() {
+            // 生成新蛇头（继承头部绿色）
             const head = {
                 x: snake[0].x + direction.x,
                 y: snake[0].y + direction.y,
@@ -146,27 +165,36 @@
             };
             snake.unshift(head);
 
+            // 吃到食物加分+不删尾部（新增对应颜色段）
             if (head.x === food.x && head.y === food.y) {
                 score += 10;
                 scoreElement.textContent = `Score: ${score}`;
                 food = generateFood();
+                // 达到250分触发胜利
+                if (score >= WIN_SCORE) {
+                    clearInterval(gameLoop);
+                    showVictory();
+                    return;
+                }
             } else {
-                snake.pop();
+                snake.pop(); // 没吃到食物删尾部，保持长度
             }
 
-            // 游戏结束条件
+            // 撞墙/撞自己触发失败
             if (
                 head.x < 0 || head.x >= 20 ||
                 head.y < 0 || head.y >= 20 ||
                 snake.slice(1).some(seg => seg.x === head.x && seg.y === head.y)
             ) {
                 clearInterval(gameLoop);
-                showGameOver(); // 显示Game Over提示
+                showGameOver();
             }
         }
 
+        // 渲染蛇和食物（每段保留自身颜色）
         function draw() {
             gameBoard.innerHTML = '';
+            // 渲染彩色蛇身
             snake.forEach(seg => {
                 const div = document.createElement('div');
                 div.style.gridRowStart = seg.y + 1;
@@ -175,6 +203,7 @@
                 div.style.border = '1px solid rgba(0,0,0,0.1)';
                 gameBoard.appendChild(div);
             });
+            // 渲染食物
             const foodDiv = document.createElement('div');
             foodDiv.style.gridRowStart = food.y + 1;
             foodDiv.style.gridColumnStart = food.x + 1;
@@ -183,6 +212,7 @@
             gameBoard.appendChild(foodDiv);
         }
 
+        // 电脑方向键控制（禁止反向）
         function changeDirection(e) {
             const LEFT = 37, RIGHT = 39, UP = 38, DOWN = 40;
             const key = e.keyCode;
@@ -195,22 +225,57 @@
             if (key === DOWN && !isUp) direction = { x: 0, y: 1 };
         }
 
-        // 显示Game Over提示（弹窗样式）
+        // 手机触屏滑动控制（防误触，滑距超20才响应）
+        function touchStart(e) {
+            if (!isGameStarted) return;
+            touchStartX = e.touches[0].clientX;
+            touchStartY = e.touches[0].clientY;
+        }
+        function touchEnd(e) {
+            if (!isGameStarted) return;
+            const touchEndX = e.changedTouches[0].clientX;
+            const touchEndY = e.changedTouches[0].clientY;
+            const dx = touchEndX - touchStartX;
+            const dy = touchEndY - touchStartY;
+            const isLeft = direction.x === -1, isRight = direction.x === 1;
+            const isUp = direction.y === -1, isDown = direction.y === 1;
+
+            if (Math.abs(dx) > Math.abs(dy)) {
+                dx < -20 && !isRight ? direction = { x: -1, y: 0 } : '';
+                dx > 20 && !isLeft ? direction = { x: 1, y: 0 } : '';
+            } else {
+                dy < -20 && !isDown ? direction = { x: 0, y: -1 } : '';
+                dy > 20 && !isUp ? direction = { x: 0, y: 1 } : '';
+            }
+        }
+
+        // 显示Game Over失败弹窗
         function showGameOver() {
             const modal = document.createElement('div');
-            modal.className = 'game-over-modal';
+            modal.className = 'modal';
             modal.innerHTML = `
                 <div class="game-over-text">Game Over</div>
                 <div class="final-score">Final Score: ${score}</div>
                 <button class="restart-btn">Play Again</button>
             `;
             document.body.appendChild(modal);
-            // 点击重新开始
-            modal.querySelector('.restart-btn').addEventListener('click', () => {
-                location.reload();
-            });
+            modal.querySelector('.restart-btn').addEventListener('click', () => location.reload());
         }
 
+        // 显示Victory胜利弹窗（250分触发）
+        function showVictory() {
+            const modal = document.createElement('div');
+            modal.className = 'modal';
+            modal.innerHTML = `
+                <div class="victory-text">Victory</div>
+                <div class="final-score">You Win! Score: ${score}</div>
+                <button class="restart-btn">Play Again</button>
+            `;
+            document.body.appendChild(modal);
+            modal.querySelector('.restart-btn').addEventListener('click', () => location.reload());
+        }
+
+        // 开始游戏
         function startGame() {
             isGameStarted = true;
             startBtn.style.display = 'none';
@@ -220,8 +285,12 @@
             }, 180);
         }
 
+        // 绑定所有事件：开始按钮+键盘+触屏
         startBtn.addEventListener('click', startGame);
         document.addEventListener('keydown', changeDirection);
+        document.addEventListener('touchstart', touchStart);
+        document.addEventListener('touchend', touchEnd);
+        // 初始渲染（显示蛇和食物，不移动）
         draw();
     </script>
 </body>
