--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>Snake 2-Levels</title>
+  <title>Snake Game</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
@@ -39,37 +39,83 @@
       color: #fff;
       transition: all 0.2s;
     }
-    #pause-btn:hover {
-      background: #444;
-      border-color: #888;
-    }
-    #pause-btn:active {
-      transform: scale(0.95);
-    }
     #game-board {
       background: #222;
       display: grid;
       gap: 1px;
       border: 2px solid #444;
       transition: all 0.3s;
+      position: relative;
+    }
+    #game-board.tutorial {
+      background-image: linear-gradient(#333 1px, transparent 1px),
+                        linear-gradient(90deg, #333 1px, transparent 1px);
+      background-size: 20px 20px;
+    }
+    .tutorial-text {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      color: #f44336;
+      font-size: 14px;
+      font-weight: bold;
+      line-height: 1.4;
+      text-shadow: 0 0 2px #000;
+      z-index: 10;
     }
     #tips { margin-top: 10px; color: #888; text-align: center; }
     #start-btn {
-      padding: 15px 30px;
+      padding: 20px 50px;
       border: none;
-      border-radius: 50px;
+      border-radius: 100px;
       background: #4CAF50;
       color: white;
-      font-size: 18px;
+      font-size: 22px;
       font-weight: bold;
       cursor: pointer;
+      margin-bottom: 10px;
+    }
+    .lang-group {
+      display: flex;
+      gap: 10px;
+      margin-top: 6px;
+    }
+    .lang-btn {
+      padding: 8px 16px;
+      border-radius: 8px;
+      border: none;
+      background: #555;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    .lang-btn.active {
+      background: #4CAF50;
     }
     .modal {
       position: fixed;
       top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(0,0,0,0.85);
+      background: rgba(0,0,0,0.9);
       display: flex; flex-direction: column; align-items: center; justify-content: center;
       z-index: 999;
+    }
+    .device-btn, .skip-btn {
+      font-size: 22px;
+      padding: 14px 28px;
+      margin: 10px;
+      border-radius: 12px;
+      border: none;
+      background: #4CAF50;
+      color: white;
+      cursor: pointer;
+    }
+    .notice {
+      font-size: 14px;
+      color: #FFEB3B;
+      margin-top: 15px;
+      max-width: 300px;
+      text-align: center;
+      line-height: 1.4;
     }
     .victory-text {
       font-size: 50px;
@@ -107,40 +153,124 @@
 </head>
 <body>
 
-<div class="score-row">
+<div class="score-row" style="display:none;">
   <div id="score">Score: 0</div>
   <button id="pause-btn">⏸</button>
 </div>
-<div id="game-board"></div>
-<div id="tips">PC: ↑↓←→ | Space=Pause | Mobile: Swipe | Tap circle to pause</div>
+<div id="game-board" style="display:none;"></div>
+<div id="tips" style="display:none;">PC: ↑↓←→ | Space=Pause | Mobile: Swipe | Tap circle to pause</div>
+
 <button id="start-btn">Start</button>
+<div class="lang-group">
+  <button class="lang-btn" id="btn-en">English</button>
+  <button class="lang-btn" id="btn-cn">中文</button>
+</div>
 
 <script>
   const gameBoard = document.getElementById('game-board');
+  const scoreRow = document.querySelector('.score-row');
   const scoreElement = document.getElementById('score');
   const startBtn = document.getElementById('start-btn');
   const pauseBtn = document.getElementById('pause-btn');
+  const tips = document.getElementById('tips');
+  const btnEn = document.getElementById('btn-en');
+  const btnCn = document.getElementById('btn-cn');
 
-  let level = 1;
+  const langText = {
+    cn: {
+      start: '开始',
+      chooseDevice: '选择设备',
+      keyboard: '⌨️ 键盘',
+      mobile: '📱 手机',
+      keyboardGuide: '使用 ↑ ↓ ← → 移动',
+      mobileGuide: '滑动屏幕移动',
+      ok: '确定',
+      goal: '目标：吃掉食物',
+      notice: '注意：碰墙/碰自己即死',
+      tabletNotice: '平板用户可在游玩中随意切换操作方式',
+      skipTutorial: '是否跳过教学关？',
+      tutorial: '教学关',
+      level1: '第一关',
+      level2: '第二关',
+      gameOver: '游戏结束',
+      tutorialComplete: '教学完成！',
+      victory: '恭喜过关！',
+      finalWin: '你赢了！',
+      perfect: '完美！',
+      score: '分数',
+      nextLevel: '即将进入下一关',
+      playAgain: '重新开始',
+    },
+    en: {
+      start: 'Start',
+      chooseDevice: 'Choose Device',
+      keyboard: '⌨️ Keyboard',
+      mobile: '📱 Mobile',
+      keyboardGuide: 'Use ↑ ↓ ← → to move',
+      mobileGuide: 'Swipe to move',
+      ok: 'OK',
+      goal: 'Goal: Eat food',
+      notice: 'Notice: Die if hit wall/self',
+      tabletNotice: 'Tablet users can switch control mode anytime while playing',
+      skipTutorial: 'Skip tutorial?',
+      tutorial: 'Tutorial',
+      level1: 'Level 1',
+      level2: 'Level 2',
+      gameOver: 'Game Over',
+      tutorialComplete: 'Tutorial Complete!',
+      victory: 'Victory!',
+      finalWin: 'You Win!',
+      perfect: 'Perfect!',
+      score: 'Score',
+      nextLevel: 'Next Level Soon',
+      playAgain: 'Play Again',
+    }
+  };
+
+  let lang = 'en';
+  let mode = null;
+  let level = 0;
   let gridSize = 20;
-  let speed = 180;
+  let speed = 280;
   let score = 0;
   let snake, food, direction;
   let gameLoop;
   let isGameStarted = false;
   let isPaused = false;
+  let tutorialSkipped = false;
 
   let touchStartX = 0;
   let touchStartY = 0;
 
+  function t(key) {
+    return langText[lang][key];
+  }
+
+  function setLang(newLang) {
+    lang = newLang;
+    startBtn.innerText = t('start');
+    btnEn.classList.toggle('active', lang === 'en');
+    btnCn.classList.toggle('active', lang === 'cn');
+  }
+
+  btnEn.onclick = () => setLang('en');
+  btnCn.onclick = () => setLang('cn');
+
   function resetGame() {
     clearInterval(gameLoop);
-    if (level === 1) {
+    if (level === 0) {
       gridSize = 20;
-      speed = 180;
+      speed = 280;
+      gameBoard.classList.add('tutorial');
     } else {
-      gridSize = 23;
-      speed = 160;
+      gameBoard.classList.remove('tutorial');
+      if (level === 1) {
+        gridSize = 20;
+        speed = 180;
+      } else {
+        gridSize = 23;
+        speed = 160;
+      }
     }
     gameBoard.style.gridTemplateColumns = `repeat(${gridSize}, 20px)`;
     gameBoard.style.gridTemplateRows = `repeat(${gridSize}, 20px)`;
@@ -158,7 +288,11 @@
   }
 
   function updateScore() {
-    scoreElement.innerText = `Level ${level} | Score: ${score}`;
+    let label;
+    if (level === 0) label = t('tutorial');
+    else if (level === 1) label = t('level1');
+    else label = t('level2');
+    scoreElement.innerText = `${label} | ${t('score')}: ${score}`;
   }
 
   function getRandomColor() {
@@ -183,17 +317,14 @@
     const head = snake[0];
     const d = distance(head, food);
     const maxStep = d < 4 ? 0.5 : d < 7 ? 1 : 1.5;
-
     let dx = 0, dy = 0;
     if (Math.random() > 0.5) {
       dx = (Math.random() > 0.5 ? 1 : -1) * maxStep;
     } else {
       dy = (Math.random() > 0.5 ? 1 : -1) * maxStep;
     }
-
     const nx = Math.round(food.x + dx);
     const ny = Math.round(food.y + dy);
-
     if (nx >=0 && nx < gridSize && ny >=0 && ny < gridSize && !snake.some(s=>s.x===nx&&s.y===ny)) {
       food.x = nx;
       food.y = ny;
@@ -202,7 +333,6 @@
 
   function update() {
     if (isPaused || !isGameStarted) return;
-
     const head = {x: snake[0].x + direction.x, y: snake[0].y + direction.y};
     if (head.x<0||head.x>=gridSize||head.y<0||head.y>=gridSize||snake.some((s,i)=>i>0&&s.x===head.x&&s.y===head.y)) {
       gameOver();
@@ -218,15 +348,19 @@
     } else {
       snake.pop();
     }
-    if (level===1 && score>=150) { // 这里改成了150分过关
+    if (level === 0 && score >= 40) {
+      tutorialComplete();
+      return;
+    }
+    if (level === 1 && score >= 150) {
       victory();
       return;
     }
-    if (level===2 && score>=200) {
+    if (level === 2 && score >= 200) {
       finalWin();
       return;
     }
-    if (level===2 && !ate) {
+    if (level === 2 && !ate) {
       setTimeout(moveFoodSmart, 300);
     }
     draw();
@@ -234,6 +368,12 @@
 
   function draw() {
     gameBoard.innerHTML = '';
+    if (level === 0) {
+      const tip = document.createElement('div');
+      tip.className = 'tutorial-text';
+      tip.innerText = `${t('goal')}\n${t('notice')}`;
+      gameBoard.appendChild(tip);
+    }
     snake.forEach((s,i)=>{
       const el = document.createElement('div');
       el.style.gridColumnStart = s.x+1;
@@ -251,25 +391,29 @@
 
   function gameOver() {
     clearInterval(gameLoop);
-    showModal('Game Over', `Score: ${score}`, false, true);
+    showModal(t('gameOver'), `${t('score')}: ${score}`, false, true);
+  }
+
+  function tutorialComplete() {
+    clearInterval(gameLoop);
+    showModal(t('tutorialComplete'), t('nextLevel'), true, false);
   }
 
   function victory() {
     clearInterval(gameLoop);
-    showModal('Victory!', 'Next Level Soon...', true, false);
+    showModal(t('victory'), t('nextLevel'), true, false);
   }
 
   function finalWin() {
     clearInterval(gameLoop);
-    showModal('You Win The Game!', 'Perfect!', false, true);
+    showModal(t('finalWin'), t('perfect'), false, true);
   }
 
   function showModal(title, sub, goNext, showRestart) {
     const m = document.createElement('div');
     m.className = 'modal';
-    let titleClass = title === 'Game Over' ? 'gameover-text' : 'victory-text';
-    let restartHtml = showRestart ? `<button class="restart-btn">Play Again</button>` : '';
-
+    let titleClass = title === t('gameOver') ? 'gameover-text' : 'victory-text';
+    let restartHtml = showRestart ? `<button class="restart-btn">${t('playAgain')}</button>` : '';
     m.innerHTML = `
       <div class="${titleClass}">${title}</div>
       <div class="final-score">${sub}</div>
@@ -280,12 +424,13 @@
     if (showRestart) {
       m.querySelector('.restart-btn').onclick = () => {
         document.body.removeChild(m);
-        level = 1;
         isPaused = false;
-        resetGame();
-        startGameLoop();
         pauseBtn.innerHTML = '⏸';
         pauseBtn.style.background = '#F44336';
+        
+        // 核心：死在第几关，就重开第几关
+        resetGame();
+        startGameLoop();
       };
     }
     if (goNext) {
@@ -308,7 +453,7 @@
       if (n<=0) {
         clearInterval(iv);
         document.body.removeChild(m);
-        level = 2;
+        level++;
         resetGame();
         startGameLoop();
       } else {
@@ -334,21 +479,109 @@
     gameLoop = setInterval(update, speed);
   }
 
-  startBtn.onclick = () => {
+  function askSkipTutorial() {
+    const m = document.createElement('div');
+    m.className = 'modal';
+    m.innerHTML = `
+      <div style="font-size:28px; color:#fff; margin-bottom:20px;">${t('skipTutorial')}</div>
+      <button class="skip-btn" id="skip-yes">${lang === 'en' ? 'Yes' : '是'}</button>
+      <button class="skip-btn" id="skip-no">${lang === 'en' ? 'No' : '否'}</button>
+    `;
+    document.body.appendChild(m);
+    m.querySelector('#skip-yes').onclick = () => {
+      tutorialSkipped = true;
+      document.body.removeChild(m);
+      chooseDevice();
+    };
+    m.querySelector('#skip-no').onclick = () => {
+      tutorialSkipped = false;
+      document.body.removeChild(m);
+      chooseDevice();
+    };
+  }
+
+  function chooseDevice() {
+    const m = document.createElement('div');
+    m.className = 'modal';
+    m.innerHTML = `
+      <div style="font-size:30px; margin-bottom:10px; color:#fff;">${t('chooseDevice')}</div>
+      <button class="device-btn" id="kb">${t('keyboard')}</button>
+      <button class="device-btn" id="tb">${t('mobile')}</button>
+      <div class="notice">${t('tabletNotice')}</div>
+    `;
+    document.body.appendChild(m);
+    m.querySelector('#kb').onclick = () => {
+      mode = 'keyboard';
+      document.body.removeChild(m);
+      showKeyboardGuide();
+    };
+    m.querySelector('#tb').onclick = () => {
+      mode = 'touch';
+      document.body.removeChild(m);
+      showTouchGuide();
+    };
+  }
+
+  function showKeyboardGuide() {
+    const m = document.createElement('div');
+    m.className = 'modal';
+    m.innerHTML = `
+      <div class="victory-text">${t('keyboard')}</div>
+      <div class="final-score">${t('keyboardGuide')}</div>
+      <button class="restart-btn">${t('ok')}</button>
+    `;
+    document.body.appendChild(m);
+    m.querySelector('.restart-btn').onclick = () => {
+      document.body.removeChild(m);
+      startGameFlow();
+    };
+  }
+
+  function showTouchGuide() {
+    const m = document.createElement('div');
+    m.className = 'modal';
+    m.innerHTML = `
+      <div class="victory-text">${t('mobile')}</div>
+      <div class="final-score">${t('mobileGuide')}</div>
+      <button class="restart-btn">${t('ok')}</button>
+    `;
+    document.body.appendChild(m);
+    m.querySelector('.restart-btn').onclick = () => {
+      document.body.removeChild(m);
+      startGameFlow();
+    };
+  }
+
+  function startGameFlow() {
     startBtn.style.display = 'none';
+    document.querySelector('.lang-group').style.display = 'none';
+    scoreRow.style.display = 'flex';
+    gameBoard.style.display = 'grid';
+    tips.style.display = 'block';
+
     isGameStarted = true;
     isPaused = false;
     pauseBtn.innerHTML = '⏸';
     pauseBtn.style.background = '#F44336';
+
+    if (tutorialSkipped) {
+      level = 1;
+    } else {
+      level = 0;
+    }
     resetGame();
     startGameLoop();
+  }
+
+  startBtn.onclick = () => {
+    askSkipTutorial();
   };
 
   pauseBtn.onclick = togglePause;
 
   document.addEventListener('keydown', e=>{
     if (e.keyCode === 32) { togglePause(); e.preventDefault(); }
-    if (isPaused) return;
+    if (isPaused || !isGameStarted) return;
     const k = e.keyCode;
     const L=37,U=38,R=39,D=40;
     if (k===L && direction.x!==1) direction={x:-1,y:0};
@@ -357,7 +590,11 @@
     if (k===D && direction.y!==-1) direction={x:0,y:1};
   });
 
-  document.addEventListener('touchstart', e=>{ touchStartX = e.touches[0].clientX; touchStartY = e.touches[0].clientY; });
+  document.addEventListener('touchstart', e=>{
+    touchStartX = e.touches[0].clientX;
+    touchStartY = e.touches[0].clientY;
+  });
+
   document.addEventListener('touchend', e=>{
     if (!isGameStarted || isPaused) return;
     let x = e.changedTouches[0].clientX;
@@ -373,6 +610,5 @@
     }
   });
 </script>
-
 </body>
 </html>
